--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.syst3m.hwproject" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
     </uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -14,11 +16,28 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PopupRequest"
-            android:theme="@android:style/Theme.Dialog"></activity>
+        <activity
+            android:name=".PopupRequest"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".Game"
+            android:label="@string/title_activity_game"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:name=".LeavesGamePopup"
+            android:label="@string/title_activity_leaves_game_popup"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:name=".ResultPopup"
+            android:theme="@android:style/Theme.Dialog"
+            android:label="@string/title_activity_resulut_popup" >
+        </activity>
     </application>
 
 </manifest>
